#1 Made a small mistake at the end

--- a/English Chapters/1_What_is_quantum.ipynb
+++ b/English Chapters/1_What_is_quantum.ipynb
@@ -17,6 +17,7 @@
     "\n",
     "Great introduction materials:\n",
     "\n",
+    "- [Introduction to Classical and Quantum Computing, Thomas G Wong](http://www.thomaswong.net/introduction-to-classical-and-quantum-computing-1e2p.pdf)\n",
     "- Quantum Mechanics: The Theoretical minimum, Leonard Susskind & Art Friedman\n",
     "- Q is for Quantum, Terry Rudolph\n",
     "\n",
@@ -32,7 +33,7 @@
     "For those with more experience of physics and maths (undergraduate level)\n",
     "\n",
     "- Quantum Computation and Quantum Information, Nielsen & Chuang \n",
-    "- [Introduction to Classical and Quantum Computing, Thomas G Wong](http://www.thomaswong.net/introduction-to-classical-and-quantum-computing-1e2p.pdf)\n",
+    "\n",
     "- Introduction to Quantum Mechanics, David J Griffiths\n",
     "\n",
     "In addition, each chapter may have some references with relevant links. \n",
@@ -70,7 +71,7 @@
     "\n",
     "For the next step some removeable adhesive will be required. Imagine placing the coins together with each coin having the H facing outwards and the T's stuck together to make one coin twice as thick. Tossing this coin will always result in one coin with the H facing upwards. But before the coin is revealed, the two coins are separated. The coin at the bottom must have its T side up, leaving 2 coins one H and the other T. After shuffling the coins they are separated. \n",
     "\n",
-    "![Unit_circle](Images\\Entanglement.png)\n",
+    "![Unit_circle](\\YAItQC\\Images\\Entanglement.png)\n",
     "[2]\n",
     "\n",
     "At this point, guessing either of the coin would have a 50% chance of getting the right outcome- the same as for two coins tossed separately. \n",
