Added in Ivan's suggestions

--- a/English Chapters/1_What_is_quantum.ipynb
+++ b/English Chapters/1_What_is_quantum.ipynb
@@ -9,7 +9,7 @@
     "*I will simply express my strong belief, that that point of self-education which consists in teaching the mind to resist its desires and inclinations, until they are proved to be right, is the most important of all, not only in things of natural philosophy, but in every department of dally life.* Michael Faraday (1859) [1]\n",
     "\n",
     "\n",
-    "This jupyter book (to be compiled) is a collection of notebooks introducing the fundamentals of quantum computation, including a preliminary introduction to quantum mechanics assuming an elementary background in mathematics. \n",
+    "This jupyter book (to be compiled) is a collection of notebooks introducing the fundamentals of quantum computation, including a preliminary introduction to quantum mechanics. It is assumed that the reader has some high school level of mathematics. A basic understanding of trigonometry is important. To the extent that it is practical, the mathematics needed is covered in Chapter 3. \n",
     "\n",
     "# 0. Recommended Reading \n",
     "\n",
@@ -36,13 +36,17 @@
     "\n",
     "- Introduction to Quantum Mechanics, David J Griffiths\n",
     "\n",
-    "In addition, each chapter may have some references with relevant links. \n",
-    "\n",
+    "In addition, each chapter may have some references with relevant links.\n",
     "## 1. What is Quantum?\n",
     "\n",
-    "### 1.1 That thing with the cats?\n",
+    "### 1.1 Common misconceptions about quantum \n",
+    " \n",
+    "In science fiction the adjective quantum is often used to explain how a technology that seems to defy the laws of physics works. In the 2018 superhero movie *Ant-Man*, the protagonist is able to access this realm by becoming smaller and smaller until they enter the mysterious *Quantum Realm*, described as “a reality where all concepts of time and space become irrelevant”. \n",
     "\n",
-    "In popular culture there exist many rather romanticised depictions of quantum technologies, particularly in the genre of science fiction. These are very widely innacurate and the many misconceptions widely held by the public about what quantum mechanics allows and this is especially true of quantum computation. \n",
+    "If this was how subatomic physics worked, there would be no subatomic physics. \n",
+    "\n",
+    "Quantum mechanics is described by the Schrödinger equation that is built on space and time. Quantum physics has some differences to classical physics, the physics everyone is used to experiencing in everyday life. Quantum it is not some magical concept which allows for anything that violates classical physics to be explained away. There are however, some small but significant quirks of quantum mechanics that allow for the development of new technologies. \n",
+    " \n",
     "\n",
     "### 1.2 How many physicists does it take to change a lightbulb?\n",
     "\n",
