--- a/English Chapters/0_Acknowledgements.ipynb
+++ b/English Chapters/0_Acknowledgements.ipynb
@@ -11,7 +11,9 @@
     "\n",
     "Thanking Eric (Passawis) for his grammatical corrections to chapters 1,2,3... as well as his encouraging feedback.\n",
     "\n",
-    "Thanking Cris for his invaluable GitHub support"
+    "Thanking Cris for his invaluable GitHub support\n",
+    "\n",
+    "For his excellent feedback on chapter 1, I would like to thank Ivan Arie De Jesus Caballero Simbaqueba."
    ]
   }
  ],
