--- a/English Chapters/3.1_MM_Linear_algebra.ipynb
+++ b/English Chapters/3.1_MM_Linear_algebra.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "### 3.1.1 Vectors\n",
     "\n",
-    "Vectors can be introduced as objects that have both direction & magnitude. Velocity is a vector because it has a magnitude, the speed at which the object travels with, and a direction, where it's moving towards. In linear algebra, a vector can be denoted by putting an arrow over a letter as $ \\vec{v} $ .\n",
+    "Vectors are objects that have both direction & magnitude. Velocity is a vector because it has a magnitude, the speed at which the object travels with, and a direction, where it's moving towards. In linear algebra, a vector can be denoted by putting an arrow over a letter as $ \\vec{v} $ .\n",
     "\n",
     "Imagine a car travelling diagonally across a road. At the same time, the car is travelling along the direction of the road as well as perpendicularly across the road. It can be said that the velocity of the car has a component pointing along the road and another component across the road. \n",
     "\n",
@@ -34,19 +34,56 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "### 3.1.2 The Inner Product \n",
+    "Here the vector $\\vec{v}$ has two components, $v_{alon}$ & $v_{acro}$ so the vector has a dimension of 2. In 3D space, any point can be described by 3 vectors. In general, a vector can be of any dimension, with any number of components. \n",
+    "\n",
+    "We can write any n-dimensional vector as\n",
+    "\n",
+    "$$\n",
+    "\\vec{v} = \\begin{bmatrix} v_0 \\\\ v_1 \\\\ \\vdots \\\\ v_{n-1} \\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "Where the subscript $v_i$ indicates the i $^{th}$ component of $\\vec{v}$. Note the convention of starting from 0 and ending at $n-1$. This convention of counting from 0 is widely used in QC and conveniently is also used in python too. \n",
+    "\n",
+    "### 3.1.2 Adding vectors\n",
+    "\n",
+    "It can be useful to add vectors. All this requires is adding the corresponding components of each vector. Adding two vectors, $\\vec{a}$ & $\\vec{b}$\n",
+    "\n",
+    "$$\\vec{a} + \\vec{b} = \\begin{bmatrix} a_0 \\\\ a_1 \\\\ \\vdots \\\\ a_{n-1} \\end{bmatrix} + \\begin{bmatrix} b_0 \\\\ b_1 \\\\ \\vdots \\\\ b_{n-1} \\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "### 3.1.3 Multiplying a vector by a scalar \n",
+    "\n",
+    "To make a vector bigger by some scale factor, the vector is multiplied by a scalar. To scale the vector $\\vec{v}$ by some scalar quantitity, $a$, this would be done as \n",
+    "\n",
+    "$$\n",
+    "a \\vec{v} = a\\begin{bmatrix} v_0 \\\\ v_1 \\\\ \\vdots \\\\ v_{n-1} \\end{bmatrix} = \\begin{bmatrix} a \\times v_0 \\\\ a \\times v_1 \\\\ \\vdots \\\\ a \\times v_{n-1} \\end{bmatrix} \n",
+    "$$\n",
+    "\n",
+    "\n",
+    "### 3.1.4 The inner product \n",
     "\n",
     "\n",
     "\n",
-    "### 3.1.3 Matrices\n",
+    "\n",
+    "### 3.1.5 Perpendicular vectors \n",
     "\n",
     "\n",
     "\n",
-    "### 3.1.4 What's a tensor?\n",
     "\n",
-    "Matrices and vectors are both elements of what is more generally known as a tensor. In the area of physics it has become something of a running joke the fact that many physicists use tensors regularly but do not completley understand what  they are. As this is not indended to be a maths textbook, tensors will not be properly defined here. \n",
+    "### 3.1.6 Matrices\n",
     "\n",
-    "The reason they are still worth mentioning is that the concept of what a tensor is, and the tensor product, is very much vital for a solid foundation in quantum computing. As the course progresses these two concepts may need to be introduced more formally. "
+    "Another object, closely related to a vector, is a matrix. A matrix is just an array of numbers which you can perform a matrix product on. \n",
+    "\n",
+    "\n",
+    "\n",
+    "### 3.1.7 Matrix vector product \n",
+    "\n",
+    "\n",
+    "### 3.1.8 Matrix-matrix product \n",
+    "\n",
+    "\n",
+    "### 3.1.9 Unitary matrices "
    ]
   }
  ],
