--- a/English Chapters/3.2_MM_Trigonometry_Complex.ipynb
+++ b/English Chapters/3.2_MM_Trigonometry_Complex.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.3 Complicating the numbers \n",
+    "## 3.3 Beyond real numbers\n",
     "\n",
     "So far everything in this textbook has been described using *real* numbers- that is the set numbers you can produce on most calculators. It seems that nature in it's infinite beauty calls for us to expand our set of numbers to better understand the fabric of reality. \n",
     "\n",
@@ -66,27 +66,7 @@
     "\n",
     "$$ e^{i \\theta} = cos(\\theta) + i sin(\\theta) $$\n",
     "\n",
-    "The significance of this is that one can represent any complex number in this fasion simply by multiplying the left hand side by some magnitude. In the context of quantum information this object $ e^{i\\theta}$ is commonly referred to as a phase and is of exceptional importance. To explain why $\\theta$ is so significant would require its own chapter. Instead it shall be incorporated into later chapters as needed.\n",
-    "\n",
-    "\n",
-    "### 3.3.5 $n^{th}$ roots of unity \n",
-    "\n",
-    "Using the Argand plane one can plot out the square roots of $1$ as $\\pm 1$. Combining this with Euler's formula one can represent the roots using the coresponding angles of $1 = e^{i\\theta_{0}}$ $;$ $\\theta_{0} = 0$,\n",
-    "$1 = e^{i\\theta_{1}}$ $;$ $\\theta_{1} = \\pi$\n",
-    "\n",
-    "Below an example of the fifth roots of unity can be seen on the Argand plane:\n",
-    "\n",
-    "![Roots_of_unity](Images\\One5Root.svg)\n",
-    "\n",
-    "[4]\n",
-    "\n",
-    "### 3.4 The most beautiful equation\n",
-    "\n",
-    "*Like a Shakespearean sonnet that captures the very essence of love, or a painting that brings out the beauty of the human form that is far more than just skin deep, Euler's Equation reaches down into the very depths of existence.* - Keith Devlin. \n",
-    "\n",
-    "The beauty of Euler's identity lies in the way it uses so many important fundamental constants just once. Using Euler's formula and setting $\\theta = \\pi$ one obtains *Euler's identity*:\n",
-    "\n",
-    "$$ e^{i\\pi} + 1 = 0 $$"
+    "The significance of this is that one can represent any complex number in this fasion simply by multiplying the left hand side by some magnitude. In the context of quantum information this object $ e^{i\\theta}$ is commonly referred to as a phase and is of exceptional importance. To explain why $\\theta$ is so significant would require its own chapter. Instead it shall be incorporated into later chapters as needed.\n"
    ]
   },
   {
