--- a/English Chapters/4_Dirac_Notation.ipynb
+++ b/English Chapters/4_Dirac_Notation.ipynb
@@ -6,20 +6,25 @@
    "source": [
     "# 4 Dirac Notation\n",
     "\n",
-    "This chapter uses the maths from section 3 to describe some basic quantum mechanics.\n",
+    "This chapter explains a bit of the framework for quantum computing using the maths from the last chapter. It's like learning the language of quantum computing. \n",
     "\n",
+    "## 4.1 Information inside a computer\n",
     "\n",
-    "## 4.1 Bra-Ket not bracket \n",
+    "When using a computer everyday, it's important to be able to extract useful information from the computer. For instance, reading emails requires being able to access the information in your inbox. \n",
     "\n",
-    " When giving a quantum mechanical description of a physical system it is more convenient to use a suitable shorthand. In 1939 Paul Dirac came up with a notation that can describe quantum systems in a neat and effective manner. Dirac notation is used across all areas of quantum physics including quantum information. \n",
+    "Unlike reading emails, quantum computing works at the lowest level of the system. It would be like directly accessing the bits in a classical computer.  \n",
+    "\n",
+    "Instead of working with bits, quantum computing works with qubits. To do anything at all with qubits, it's important to describe what state they're in. The state of a qubit is described by something known as a ket. \n",
     "\n",
     "\n",
     "### 4.1.1 Ket?\n",
     "\n",
-    "To introduce explain the fundamental basics of quantum mechanics, it is still possible to continue with the coins. If the coin is heads up, it can be described by the state $\\ket{H}$. If it's tails up it is $\\ket{T}$.\n",
     "\n",
+    "How do we represent a quantum state? It is easy to think this would require a very complicated mechanism. It is as simple as a column vector! The state of a quantum system can be described with a vector known as a ket. Usually, the state of a system is given by the ket $\\ket{\\psi}$.\n",
     "\n",
-    "When the coin is spinning in the air, the superposition state, this state can be represented by the state $\\ket{\\psi}$: \n",
+    "The coins still work as an example to illustrate the state of the system. If the coin is heads up we can use the ket $\\ket{H}$, if it's tails up it is $\\ket{T}$.\n",
+    "\n",
+    "When the coin is spinning in the air, the superposition state (see section 1.3), this state can be represented by the state $\\ket{\\psi}$: \n",
     "\n",
     "$$\n",
     "\\ket{\\psi} = \\frac{1}{\\sqrt{2}}[\\ket{H} + \\ket{T}]\n",
@@ -27,7 +32,7 @@
     "\n",
     "Since the coin has a $\\frac{1}{2}$ probability of being in either heads or tails, one may have intuitively expected this state to have a $\\frac{1}{2}$ instead of $\\frac{1}{\\sqrt{2}}$. The reason for this is that in quantum mechanics, a state is described with an amplitude (the factor by which it is multiplied) proportional to the square root of the probability. \n",
     "\n",
-    "It can be convenient to define the heads state using a ket as:\n",
+    "It can be convenient to define the heads state using a ket as\n",
     "\n",
     "$$\n",
     "\\ket{H} = \n",
@@ -37,7 +42,7 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "Similarly, the tails side up can be represented by the ket:\n",
+    "Similarly, the tails side up can be represented by the ket\n",
     "\n",
     "$$\n",
     "\\ket{T} = \n",
@@ -47,17 +52,17 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "This allows $\\ket{\\psi} $ to be expanded as :\n",
+    "This allows $\\ket{\\psi} $ to be expanded as \n",
     "\n",
     "$$\n",
-    "\\ket{\\psi} = \\frac{1}{\\sqrt{2}}[\\begin{bmatrix}\n",
+    "\\ket{\\psi} = \\frac{1}{\\sqrt{2}}\\left(\\begin{bmatrix}\n",
     "1 \\\\ 0\n",
     "\\end{bmatrix}+ \\begin{bmatrix}\n",
     "0 \\\\ 1\n",
-    "\\end{bmatrix}]\n",
+    "\\end{bmatrix}\\right)\n",
     "$$\n",
     "\n",
-    "Which can then be written in a much more compact way as:\n",
+    "By adding the corresponding elements of each vector, this can be simplified to\n",
     "\n",
     "$$ \\ket{\\psi} = \\frac{1}{\\sqrt{2}}\\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} $$\n",
     "\n",
@@ -85,17 +90,24 @@
     "$$\n",
     "\n",
     "More generally, the state of a quantum system $\\ket{\\psi}$ is referred to as a *wavefunction*. The wavefunction describes all the information we have availible about a system. In quantum computing the state of the quantum computer is described by the wavefunction (in later chapters a more advanced formalism will be introduced based off the wavefunction).\n",
-    "## 4.2 Inner product \n",
     "\n",
-    "For the coins, one may wish to know the probability of flipping the coin and observing it to be heads or tails up. With Dirac notaion, the probability of an outcome (heads up) can be calculated using the Born Rule. Using the coin example, the Born rule states that the probability of the coin ending up in the heads state $\\ket{H}$ can be calculated as:\n",
+    "## 4.2 Probability of measurement\n",
+    "\n",
+    "\n",
+    "\n",
+    "For the coins, one may wish to know the probability of flipping the coin and getting heads or tails up. With Dirac notaion, the probability of an outcome (heads up) can be calculated using the inner product. This is done as\n",
+    "\n",
+    "\n",
+    "\n",
+    "Using the coin example, the states that the probability of the coin ending up in the heads state $\\ket{H}$ can be calculated as\n",
     "\n",
     "$$ P(H) = |\\braket{\\psi|H}|^2  $$\n",
     "\n",
-    "Explicity computing this gives:\n",
+    "Explicity computing this gives\n",
     "\n",
     "\n",
     "$$\n",
-    "P(H) = |\\braket{\\psi|H}|^2 =   \\Bigg |\\frac{1}{\\sqrt{2}}\\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} \\begin{bmatrix} 1 & 0 \\end{bmatrix} \\Bigg |^2\n",
+    "P(H) = |\\braket{\\psi|H}|^2 =   \\Bigg |\\frac{1}{\\sqrt{2}}\\begin{bmatrix} 1 & 1 \\end{bmatrix} \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix} \\Bigg |^2\n",
     "$$\n",
     "\n",
     "$$ = \\left| \\frac{1}{\\sqrt{2}} \\right|^2 = \\frac{1}{2} $$\n",
