Added section on dot product

--- a/English Chapters/2_What_is_quantum_computing.ipynb
+++ b/English Chapters/2_What_is_quantum_computing.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "- Sticking coins together is even slower than just flipping them. Not to mention the part where they get shuffled in a pseudorandom way. \n",
     "\n",
-    "In other words, a practical quantum computer would, as one might expect, need to be a quantum system that can be controlled effectively and efficiently to carry out useful computations.  "
+    "In other words, a practical quantum computer would, as one might expect, need to be a quantum system that can be controlled effectively and efficiently to carry out useful computations. There must be a precise control which allows for more than creating the superposition state if applications beyond random generation are to be realised.  "
    ]
   },
   {
