--- a/English Chapters/3.1_MM_Linear_algebra.ipynb
+++ b/English Chapters/3.1_MM_Linear_algebra.ipynb
@@ -51,39 +51,71 @@
     "$$\\vec{a} + \\vec{b} = \\begin{bmatrix} a_0 \\\\ a_1 \\\\ \\vdots \\\\ a_{n-1} \\end{bmatrix} + \\begin{bmatrix} b_0 \\\\ b_1 \\\\ \\vdots \\\\ b_{n-1} \\end{bmatrix}\n",
     "$$\n",
     "\n",
+    "The same can be done in reverse, a vector can be split into different components. For example \n",
+    "\n",
+    "$$\n",
+    "\\vec{a} = \\begin{bmatrix} 3 \\\\ 2 \\end{bmatrix} = \\begin{bmatrix} 3 \\\\ 0 \\end{bmatrix} + \\begin{bmatrix} 0 \\\\ 2 \\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "This can be useful for expressing a vector in terms of its components. \n",
     "\n",
     "### 3.1.3 Multiplying a vector by a scalar \n",
     "\n",
-    "To make a vector bigger by some scale factor, the vector is multiplied by a scalar. To scale the vector $\\vec{v}$ by some scalar quantitity, $a$, this would be done as \n",
+    "Vectors can be made smaller or bigger by enlarging them by some scale factor. To make a vector bigger by some scale factor, the vector is multiplied by a scalar. To scale the vector $\\vec{v}$ by some scalar quantitity, $a$, this would be done by multiplying each componenent of the vector by the scalar factor. \n",
     "\n",
     "$$\n",
     "a \\vec{v} = a\\begin{bmatrix} v_0 \\\\ v_1 \\\\ \\vdots \\\\ v_{n-1} \\end{bmatrix} = \\begin{bmatrix} a \\times v_0 \\\\ a \\times v_1 \\\\ \\vdots \\\\ a \\times v_{n-1} \\end{bmatrix} \n",
     "$$\n",
     "\n",
     "\n",
-    "### 3.1.4 The inner product \n",
+    "### 3.1.4 The dot product \n",
+    "\n",
+    "It can be very useful to compare two vectors by measuring how alligned they are. Imagine two vectors poiting the same way. These two vectors would have a lot in common, and so would be perfectly alligned. The measure of how similar two vectors are is the dot product (sometimes called inner product). The dot product can be calculated by multiplying each component of the vectors and adding them up. \n",
+    "\n",
+    "For example take the vectors $\\vec{u}$ & $\\vec{v}$ as \n",
+    "\n",
+    " $$\n",
+    " \\vec{u} = \\begin{bmatrix} 1 \\\\ 2 \\end{bmatrix} ;  \\vec{v} = \\begin{bmatrix} 3 \\\\ 1 \\end{bmatrix} \n",
+    " $$\n",
+    "\n",
+    " The dot product between them is \n",
+    "\n",
+    " $$\n",
+    "\\vec{u} \\cdot \\vec{v} = \\begin{bmatrix} 1 \\\\ 2 \\end{bmatrix} \\cdot \\begin{bmatrix} 3 \\\\ 1 \\end{bmatrix}\n",
+    " $$\n",
+    "\n",
+    "$$\n",
+    "= 1 \\times 3 + 2 \\times 1 = 3 + 2 = 5 \n",
+    "$$\n",
+    "\n",
+    "This is represented in the figure below where the length of $\\vec{a}$ shows the component of $\\vec{u}$ in the direction of $\\vec{v}$. This is then scaled by the length of $\\vec{v}$ to give the dot product. \n",
+    "\n",
+    "![Dot_product](Images\\Dot_product_visualisation.png)\n",
     "\n",
     "\n",
-    "\n",
+    "The dot product depends on the angle between the vectors. If the vectors are pointing the same way, it will be bigger, if the vectors are pointing in completley opposite directions, it will be smaller. \n",
     "\n",
     "### 3.1.5 Perpendicular vectors \n",
     "\n",
-    "\n",
+    "If two vectors have no components in common, their dot product will be zero. This can be shown by two vectors that have an angle of $90\\degree$ between them.  We call these vectors perpendicular. In quantum mechanics, the preferred term is *orthogonal* which means the same thing, but applies to more than just vectors. \n",
     "\n",
     "\n",
     "### 3.1.6 Matrices\n",
     "\n",
-    "Another object, closely related to a vector, is a matrix. A matrix is just an array of numbers which you can perform a matrix product on. \n",
+    "Another object, closely related to a vector, is a matrix. A matrix is just an array of numbers which you can perform a matrix product on. All the quantum gates will be represented as matrices, so understanding how they work will be essential for quantum computations. \n",
     "\n",
     "\n",
     "\n",
-    "### 3.1.7 Matrix vector product \n",
+    "### 3.1.7 Matrix-vector product \n",
     "\n",
     "\n",
     "### 3.1.8 Matrix-matrix product \n",
     "\n",
+    "A matrix can also act on another matrix. \n",
     "\n",
-    "### 3.1.9 Unitary matrices "
+    "### 3.1.9 Unitary matrices \n",
+    "\n",
+    "For all quantum gates, an important property they have is that they are unitary. Unitary matrices "
    ]
   }
  ],
