Moved Bloch into single qubits

--- a/English Chapters/3.1_MM_Linear_algebra.ipynb
+++ b/English Chapters/3.1_MM_Linear_algebra.ipynb
@@ -100,20 +100,31 @@
     "If two vectors have no components in common, their dot product will be zero. This can be shown by two vectors that have an angle of $90\\degree$ between them.  We call these vectors perpendicular. In quantum mechanics, the preferred term is *orthogonal* which means the same thing, but applies to more than just vectors. \n",
     "\n",
     "\n",
-    "### 3.1.6 Matrices\n",
+    "### 3.2.1 Matrices\n",
     "\n",
-    "Another object, closely related to a vector, is a matrix. A matrix is just an array of numbers which you can perform a matrix product on. All the quantum gates will be represented as matrices, so understanding how they work will be essential for quantum computations. \n",
+    "Another object, closely related to a vector, is a matrix. A matrix is just an array of numbers which you can perform a matrix product on. All the quantum gates will be represented as matrices, so understanding how they work will be essential for quantum computations. Matrices are usually denoted by capital letters, for example $M$\n",
+    "\n",
+    "$$\n",
+    "M = \\begin{bmatrix} 1 & 2  \\\\ 3 & 4 \\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "$M$ has 4 elements: 1,2,3 & 4. \n",
+    "\n",
+    "### 3.2.2 Matrix-vector product \n",
+    "\n",
+    "As well as storing information, matrices can be used to transform vectors. This is done using the matirx-vector product. \n",
     "\n",
     "\n",
     "\n",
-    "### 3.1.7 Matrix-vector product \n",
+    "### 3.2.3 Matrix-matrix product \n",
+    "\n",
+    "A matrices can also act on each other similarly to how they act on vectors. \n",
     "\n",
     "\n",
-    "### 3.1.8 Matrix-matrix product \n",
+    "### 3.2.4 Inverse matrivces\n",
     "\n",
-    "A matrix can also act on another matrix. \n",
     "\n",
-    "### 3.1.9 Unitary matrices \n",
+    "### 3.2.5 Unitary matrices \n",
     "\n",
     "For all quantum gates, an important property they have is that they are unitary. Unitary matrices "
    ]
