--- a/English Chapters/3.2_MM_Trigonometry_Complex.ipynb
+++ b/English Chapters/3.2_MM_Trigonometry_Complex.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 Trigonometry \n",
+    "## 3.4 Trigonometry \n",
     "\n",
     "Trigonometry is defined as \"*the branch of mathematics dealing with the relations of the sides and angles of triangles and with the relevant functions of any angles*\" but for our use it is much better to consider trigonometry the study of rotations. \n",
     "\n",
@@ -27,11 +27,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.3 Beyond real numbers\n",
+    "## 3.4 Beyond real numbers\n",
     "\n",
     "So far everything in this textbook has been described using *real* numbers- that is the set numbers you can produce on most calculators. It seems that nature in it's infinite beauty calls for us to expand our set of numbers to better understand the fabric of reality. \n",
     "\n",
-    "### 3.3.1 The square root of -1 \n",
+    "### 3.4.1 The square root of -1 \n",
     "\n",
     "There are two square roots of $4$: $+2$ & $-2$. For numbers that aren't integers there are algorithms we can run on our calculators to work out the roots to arbitrary precision. In physics there are many situtations in which the only valid solution to a particular equation calls for the square root of a negative number. To make this work, it is necessary to first define the square root of $-1$ as $i = \\sqrt{-1}$. \n",
     "\n",
@@ -42,7 +42,7 @@
     "$$ \\sqrt{-a} = \\pm i \\sqrt{a} $$\n",
     "For example the square root of $-4$ can be written as $+2i$, $-2i$\n",
     "These numbers that can be written as $ai$ are known as imaginary numbers. \n",
-    "### 3.3.2 Complex numbers \n",
+    "### 3.4.2 Complex numbers \n",
     "\n",
     "Imaginary numbers work similarly to the real numbers everyone uses on a  daily basis. One can divide, multiply, add & subtract them just as you can for real numbers. What this also means is that any of $ \\div ,\\times, +, - $ operations can be applied to a combination of both real and imaginary numbers. For instance, the positive root of $-4$, $2i$ can be added to $3$ as $3 + 2i $. Any such number that can be written as a sum of a real and imaginary number is called a *complex number*. More generally we can define this mathematically as:\n",
     "\n",
@@ -50,23 +50,38 @@
     "\n",
     "Where $a$ and $b$ are purely real numbers. The real part of $z$ is known as $ Re(z) = a$ and similarly the imaginary component of is $ Im(z) = b$. \n",
     "\n",
-    "### 3.3.3 The Argand Diagram\n",
+    "### 3.4.3 The Argand Diagram\n",
+    "\n",
+    "Complex numbers can be represented on a graph by splitting them into their real & imaginary parts. In the Argand diagram the x axis represents the real part and the y axis represents the imaginary part. \n",
     "\n",
     "![Argand_plane](Images\\A_plus_bi.svg)\n",
     "\n",
     "\n",
-    "### 3.3.4 Complex conjugate\n",
+    "### 3.4.4 Complex conjugate\n",
+    "\n",
+    "\n",
+    "Every complex number has a real & imaginary part. By taking the imaginary part of the complex number and making it negative, we get the complex conjugate. For example if the complex number $z$ is \n",
+    "\n",
+    "$z = x + iy$ \n",
+    "\n",
+    "The complex conjugate would be $z^*$ written as \n",
+    "\n",
+    "$z^* = x - iy$ \n",
     "\n",
     "![Complex_conjugate](Images\\Complex_conjugate_picture.svg.png)\n",
     " [3]\n",
     "\n",
-    "### 3.3.5 Euler's formula\n",
+    " ### 3.4.5 Magnitude of complex numbers \n",
+    "\n",
+    " \n",
+    "\n",
+    "### 3.4.5 Euler's formula\n",
     "\n",
     "Without going through all the steps of explaining where it came from, *Euler's formula* can be stated as:\n",
     "\n",
     "$$ e^{i \\theta} = cos(\\theta) + i sin(\\theta) $$\n",
     "\n",
-    "The significance of this is that one can represent any complex number in this fasion simply by multiplying the left hand side by some magnitude. In the context of quantum information this object $ e^{i\\theta}$ is commonly referred to as a phase and is of exceptional importance. To explain why $\\theta$ is so significant would require its own chapter. Instead it shall be incorporated into later chapters as needed.\n"
+    "The significance of this is that one can represent any complex number in this fasion simply by multiplying the left hand side by some magnitude. In the context of quantum information this object $ e^{i\\theta}$ is called a phase and is of exceptional importance. To explain why $\\theta$ is so significant would require its own chapter. Instead it shall be incorporated into later chapters as needed.\n"
    ]
   },
   {
