--- a/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
+++ b/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
@@ -20,7 +20,9 @@
     "\n",
     "## 5.2 The Bloch Sphere \n",
     "\n",
-    "Dirac notation is really useful for doing algebra with quantum states. It is easy to add, subtract and multpiply wavefunctions and calulate probabilities with the inner product. One limitation of Dirac notation is that it is difficult to visualise quantum states as it does not have a diagram to represent the wavefunction on. "
+    "Dirac notation is really useful for doing algebra with quantum states. It is easy to add, subtract and multpiply wavefunctions and calulate probabilities with the inner product. One limitation of Dirac notation is that it is difficult to visualise quantum states as it does not have a diagram to represent the wavefunction on. \n",
+    "\n",
+    "The Bloch sphere is a useful tool used to represent the state of qubits. "
    ]
   }
  ],
