Added a section on solutions to exercise problems

--- a/English Chapters/1_What_is_quantum.ipynb
+++ b/English Chapters/1_What_is_quantum.ipynb
@@ -18,7 +18,6 @@
     "Great introduction materials:\n",
     "\n",
     "- [Introduction to Classical and Quantum Computing, Thomas G Wong](http://www.thomaswong.net/introduction-to-classical-and-quantum-computing-1e2p.pdf)\n",
-    "- Quantum Mechanics: The Theoretical minimum, Leonard Susskind & Art Friedman\n",
     "- Q is for Quantum, Terry Rudolph\n",
     "\n",
     "\n",
@@ -97,7 +96,11 @@
     "\n",
     "Quantum Technologies, as they are defined by John Morton, director of UCLQ (as of the time of writing) are *\"ones which exploit quantum superposition and entanglement to achieve major advances over current technologies in areas including communication, sensing and information processing.\"*\n",
     "\n",
-    "These are devices that take advantage of the aforementioned phenomena for practical applications to do something better than what can be done without using them. Quantum computation is one of the most exciting quantum technologies even if it is much less mature than others like quantum metrology (sensing) and encryption (communications).\n"
+    "These are devices that take advantage of the aforementioned phenomena for practical applications to do something better than what can be done without using them. Quantum computation is one of the most exciting quantum technologies even if it is much less mature than others like quantum metrology (sensing) and encryption (communications).\n",
+    "\n",
+    "\n",
+    "## Chapter 1 Summary \n",
+    "\n"
    ]
   },
   {
