--- a/English Chapters/3.2_MM_Trigonometry_Complex.ipynb
+++ b/English Chapters/3.2_MM_Trigonometry_Complex.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "$$ sin^2(\\theta) + cos^2(\\theta) = 1 $$\n",
     "\n",
-    "From the perspective of quantum mechanics this equation is particularly nice because it forces the magnitude of the hypotenuse to be 1. \n",
+    "This relationship will show up again later. \n",
     "\n",
     "In later chapters, quantum circuits will be described in terms of rotations around a higher dimensional sphere. \n",
     "\n"
@@ -29,7 +29,7 @@
    "source": [
     "## 3.4 Beyond real numbers\n",
     "\n",
-    "So far everything in this textbook has been described using *real* numbers- that is the set numbers you can produce on most calculators. It seems that nature in it's infinite beauty calls for us to expand our set of numbers to better understand the fabric of reality. \n",
+    "So far everything in this textbook has been described using *real* numbers- that is the set numbers you can produce on most calculators. For quantum computing, we require going beyond to complex numbers. \n",
     "\n",
     "### 3.4.1 The square root of -1 \n",
     "\n",
@@ -40,8 +40,9 @@
     "$$ \\sqrt{-a} = \\sqrt{-1} \\times \\sqrt{a} $$\n",
     "\n",
     "$$ \\sqrt{-a} = \\pm i \\sqrt{a} $$\n",
-    "For example the square root of $-4$ can be written as $+2i$, $-2i$\n",
+    "For example the square root of $-4$ can be written as $+2i$, $-2i$.\n",
     "These numbers that can be written as $ai$ are known as imaginary numbers. \n",
+    "\n",
     "### 3.4.2 Complex numbers \n",
     "\n",
     "Imaginary numbers work similarly to the real numbers everyone uses on a  daily basis. One can divide, multiply, add & subtract them just as you can for real numbers. What this also means is that any of $ \\div ,\\times, +, - $ operations can be applied to a combination of both real and imaginary numbers. For instance, the positive root of $-4$, $2i$ can be added to $3$ as $3 + 2i $. Any such number that can be written as a sum of a real and imaginary number is called a *complex number*. More generally we can define this mathematically as:\n",
@@ -109,7 +110,7 @@
     "\n",
     "[3] By IkamusumeFan - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=42024951\n",
     "\n",
-    "[4] By Loadmaster (David R. Tribble)This image was made by Loadmaster (David R. Tribble)Email the author: David R. TribbleAlso see my personal gallery at Google Photos - Own work, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=14878380"
+    "[4] By Loadmaster (David R. Tribble)This image was made by Loadmaster (David R. Tribble)Email the author: David R. Tribble- Own work, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=14878380"
    ]
   }
  ],
