--- a/English Chapters/4_Dirac_Notation.ipynb
+++ b/English Chapters/4_Dirac_Notation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 4 Dirac Notation\n",
     "\n",
-    "This chapter explains a bit of the framework for quantum computing using the maths from the last chapter. It's like learning the language of quantum computing. \n",
+    "This chapter explains a bit of the framework for quantum computing using the maths from the last chapter. It's like learning the language of quantum computing, but by no means a complete description of Dirac notation. \n",
     "\n",
     "## 4.1 Information inside a computer\n",
     "\n",
@@ -17,10 +17,10 @@
     "Instead of working with bits, quantum computing works with qubits. To do anything at all with qubits, it's important to describe what state they're in. The state of a qubit is described by something known as a ket. \n",
     "\n",
     "\n",
-    "### 4.1.1 Ket?\n",
+    "### 4.1.1 How do we model the state of the system?\n",
     "\n",
     "\n",
-    "How do we represent a quantum state? It is easy to think this would require a very complicated mechanism. It is as simple as a column vector! The state of a quantum system can be described with a vector known as a ket. Usually, the state of a system is given by the ket $\\ket{\\psi}$.\n",
+    "How do we represent a quantum state? It is easy to think this would require a very complicated mechanism. For us, it is as simple as a column vector! The state of a quantum system can be described with a column vector known as a ket. Usually, the state of a system is given by the ket $\\ket{\\psi}$.\n",
     "\n",
     "The coins still work as an example to illustrate the state of the system. If the coin is heads up we can use the ket $\\ket{H}$, if it's tails up it is $\\ket{T}$.\n",
     "\n",
@@ -82,52 +82,57 @@
     "\n",
     "### 4.1.2 Bra?\n",
     "\n",
-    "Where the bra $\\bra{H}$ is the same as the ket $\\ket{H} = \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix}$ but a row vector where the complex numbers are all multiplied by $-1$. Since there are no imaginary numbers in $\\ket{H}$, the bra $\\bra{H}$ is just the transpose of the column vector as\n",
+    "Where the bra $\\bra{H}$ is the same as the ket $\\ket{H} = \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix}$ but a row vector where the imaginary part of the complex numbers are all multiplied by $-1$. Doing this to a vector is known as the *conjugate transpose*.  Since there are no imaginary numbers in $\\ket{H}$, the bra $\\bra{H}$ is just the transpose of the column vector as\n",
     "\n",
     "$$\n",
     "\n",
     "\\bra{H} = [\\ket{H}^*]^T = \\begin{bmatrix} 1 & 0 \\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "More generally, the state of a quantum system $\\ket{\\psi}$ is referred to as a *wavefunction*. The wavefunction describes all the information we have availible about a system. In quantum computing the state of the quantum computer is described by the wavefunction (in later chapters a more advanced formalism will be introduced based off the wavefunction).\n",
+    "More generally, the state of a quantum system $\\ket{\\psi}$ is referred to as a *wavefunction*. The wavefunction describes all the information we have availible about a system. In quantum computing the state of the quantum computer is described by the wavefunction.\n",
     "\n",
     "## 4.2 Probability of measurement\n",
     "\n",
-    "\n",
-    "\n",
     "For the coins, one may wish to know the probability of flipping the coin and getting heads or tails up. With Dirac notaion, the probability of an outcome (heads up) can be calculated using the inner product. This is done as\n",
-    "\n",
     "\n",
     "\n",
     "Using the coin example, the states that the probability of the coin ending up in the heads state $\\ket{H}$ can be calculated as\n",
     "\n",
     "$$ P(H) = |\\braket{\\psi|H}|^2  $$\n",
     "\n",
+    "The state we want to measure $H$ is always on the left (in a bra) and the state we have, $\\psi$ is always on the right in a ket. Then we take the magnitude of the inner product and square it. \n",
+    "\n",
+    "\n",
     "Explicity computing this gives\n",
     "\n",
     "\n",
     "$$\n",
-    "P(H) = |\\braket{\\psi|H}|^2 =   \\Bigg |\\frac{1}{\\sqrt{2}}\\begin{bmatrix} 1 & 1 \\end{bmatrix} \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix} \\Bigg |^2\n",
+    "P(H) = |\\braket{H|\\psi}|^2 =   \\Bigg |\\frac{1}{\\sqrt{2}}\\begin{bmatrix} 1 & 0 \\end{bmatrix} \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} \\Bigg |^2\n",
     "$$\n",
     "\n",
     "$$ = \\left| \\frac{1}{\\sqrt{2}} \\right|^2 = \\frac{1}{2} $$\n",
     "\n",
-    "Since all the probabilities of the coin landing on $\\ket{H}$ or $\\ket{T}$ must add to 1, for a biased or unbiased coin, it must be that:\n",
+    "### Exercise 4.1\n",
+    "\n",
+    "Since all the probabilities of the coin landing on $\\ket{H}$ or $\\ket{T}$ must add to 1, for a biased or unbiased coin, it must be that $P(H) + P(T) = 1$. Let the probability of getting heads be $P$. Using the defintion of the measurement probability, show that the probability of measuring heads and the probability of tails add up to 1. \n",
+    "\n",
+    "For any quantum state, the probability of measuring it to be in the state that it is must be 1. This statement is a bit vague\n",
     "\n",
     "$$ |\\braket{\\psi|\\psi}|^2 = 1 $$\n",
     "\n",
-    "This can be easily shown with the previous definition of $\\ket{\\psi}$\n",
+    "For any quantum system, the probabilities of finding it in each of its states must add up to 1. This means $ |\\braket{\\psi|\\psi}|^2 = 1 $ must hold for any quantum state. \n",
     "\n",
-    "$$\n",
-    "\\Bigg |\\begin{bmatrix} \\sqrt{P} \\\\ \\sqrt{1-P} \\end{bmatrix} \\begin{bmatrix} \\sqrt{P} & \\sqrt{1-P} \\end{bmatrix} \\Bigg |^2\n",
-    "$$\n",
+    "What happens to the probability of measuring tails if the coin is heads up? \n",
     "\n",
+    "The probability of measuring tails $P(T)$ is \n",
     "\n",
+    "## Chapter 4 Summary \n",
     "\n",
-    "$$ =  |\\sqrt{P}\\sqrt{P} + \\sqrt{1-P}\\sqrt{1-P}|^2 $$\n",
-    "\n",
-    "$$ =  |P + 1-P|^2 = 1 $$\n",
-    "\n"
+    "- Quantum states can be represented by column vectors \n",
+    "- We can seperate out a quantum state into orthogonal components \n",
+    "- The number in front of the component is the probability amplitude\n",
+    "- The probability of measuring a quantum system in a given state is given by the square of the modulus of the inner product\n",
+    "- The inner product of a quantum state with itself always has magnitude 1\n"
    ]
   }
  ],
