--- a/English Chapters/9_Quantum_algorithms.ipynb
+++ b/English Chapters/9_Quantum_algorithms.ipynb
@@ -4,12 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 9 Quantum Algorithms \n",
+    "## 9 Quantum Algorithms \n",
     "\n",
     "\n",
-    "## 9.1 The Black Box of the Universe \n",
     "\n",
-    "\n"
+    "### 9.1 The Black Box of the Universe \n",
+    "\n",
+    "### 9.2 Complexity theory isn't that complicated\n",
+    "\n",
+    "\n",
+    "### 9.3 Qiskit: the best platform for developing quantum algorithms"
    ]
   }
  ],
