--- a/English Chapters/2_What_is_quantum_computing.ipynb
+++ b/English Chapters/2_What_is_quantum_computing.ipynb
@@ -64,7 +64,18 @@
    "source": [
     "### 2.4 Quantum Advantage \n",
     "\n",
-    "If our conventional computers perform so many tasks better, there must be some motivation for quantum computing being such an exciting area of research. Aside from the elegance of manipulating quantum states, quantum computing is expected to be more useful than a glorified coin tossing simulator. Despite the limitations in state-of-the-art quantum computing machines, it is known of a few valuable applications where quantum algorithms *theoretically outperform* the best possible classical solution. In these specific applications it is said there is a proven *quantum advantage* as using the quantum computer derives some benefit to the user for that application. Whether or not it is worth using a quantum computer for a specific task is a very complicated question. It is not as simple as finding out if a quantum computer is faster but also whether the output of the quantum computer is better than what could have been done with conventional algorithms on a powerful classical computer. As of the time of writing, there has been no practical demonstration of a problem with real world (outside experimental physics) problem where using a quantum computer was better than using the tried and tested classical solution. As quantum computers become increasingly powerful it is hoped that this threshold will be crossed in the next few years...\n"
+    "If our conventional computers perform so many tasks better, there must be some motivation for quantum computing being such an exciting area of research. Aside from the elegance of manipulating quantum states, quantum computing is expected to be more useful than a glorified coin tossing simulator. Despite the limitations in state-of-the-art quantum computing machines, it is known of a few valuable applications where quantum algorithms *theoretically outperform* the best availible classical solution. In these specific applications it is said there is a proven *quantum advantage* as using the quantum computer derives some benefit to the user for that application. Whether or not it is worth using a quantum computer for a specific task is a very complicated question. It is not as simple as finding out if a quantum computer is faster but also whether the output of the quantum computer is better than what could have been done with conventional algorithms on a powerful classical computer. As of the time of writing, there has been no practical demonstration of a problem with real world (outside experimental physics) problem where using a quantum computer was better than using the tried and tested classical solution. As quantum computers become increasingly powerful it is hoped that this threshold will be crossed in the next few years...\n",
+    "\n",
+    "\n",
+    "## Chapter 2 Summary \n",
+    "\n",
+    "\n",
+    "- Quantum computers are more than just random objects that have superposition\n",
+    "- Algorithms are a set of instructions that we give a computer to process information \n",
+    "- Quantum algorithms are like conventional algorithms but they allow us to use superposition & entanglement \n",
+    "- For some applications, quantum algorithms have shown to be much better than classical algorithms\n",
+    "- When a quantum computer completes a task better than the next availible classical solution, there is quantum advantage\n",
+    "\n"
    ]
   }
  ],
