--- a/English Chapters/3.2_MM_Trigonometry_Complex.ipynb
+++ b/English Chapters/3.2_MM_Trigonometry_Complex.ipynb
@@ -69,12 +69,26 @@
     "\n",
     "$z^* = x - iy$ \n",
     "\n",
+    "In the figure below the complex number $z$ is shown along with its complex conjuagte. In this diagram $\\bar{z}$ is used rather than $z^*$ but it means the same thing.  \n",
+    "\n",
     "![Complex_conjugate](Images\\Complex_conjugate_picture.svg.png)\n",
     " [3]\n",
     "\n",
+    " Note how the real part is the same, but the imaginary part is on the negative axis. \n",
+    "\n",
     " ### 3.4.5 Magnitude of complex numbers \n",
     "\n",
-    " \n",
+    " It can be very useful to describe how big a complex number is. Since it has a real component and an imaginary component, the magnitude of a complex number indicates how big it is across both these components. \n",
+    "\n",
+    " The magnitude of a complex number $z$ is denoted by two vertical bars as $|z|$. It is calulated the same was as the Euclidean distance as \n",
+    "\n",
+    " $$\n",
+    " |z| = \\sqrt{a^2 + b^2}\n",
+    " $$\n",
+    "\n",
+    " With $z = a + bi$. \n",
+    "\n",
+    " The magnitude of a complex number is important for figuring out the probability of getting a particular output from a quantum computation. \n",
     "\n",
     "### 3.4.5 Euler's formula\n",
     "\n",
@@ -95,7 +109,16 @@
     "\n",
     "Fortunately it is possible to make predictions about events which may happen in the future and thus to make plans accordingly. In some cases how likely an event is can be quantified by a probability. This can be given as a probability, for instance a 40% chance of rain, a fraction, for example a 1/2 chance of throwing a heads, or a decimal (less commonly used in conversation). In any case, when the probabilities for all possible outcomes are added up correctly they sum to 100% or 1. \n",
     "\n",
-    "Quantum computing is inherently a method of manipulating probabilities in a very particular way. "
+    "Quantum computing is inherently a method of manipulating probabilities in a very particular way. \n",
+    "\n",
+    "## Chapter 3.1 Summary \n",
+    "\n",
+    "- Any point on the unit circle can be described by \n",
+    "- Imaginary numbers are a multiple of \\sqrt{-1}\n",
+    "- Complex numbers have a real and imaginary part \n",
+    "- Every complex number has a complex conjugate which has the negative imaginary part\n",
+    "- the magnitude of a complex number is the Euclidean norm of its real and imaginary components\n",
+    "- Euler's formula relates complex numbers to trigonometric functions "
    ]
   },
   {
